# RedBeltCpp

./: C3_RedBelt.sln  README.md
C3_RedBelt/: C3_RedBelt.cpp  C3_RedBelt.vcxproj  C3_RedBelt.vcxproj.filters
W1/ClassTemplates/1_IntroToClassTemplates/: 1_IntroToClassTemplates.cpp  1_IntroToClassTemplates.vcxproj  1_IntroToClassTemplates.vcxproj.filters
W1/ClassTemplates/2_UserClassIntegrationIntoForLoop/: 2_UserClassIntegrationIntoForLoop.cpp  2_UserClassIntegrationIntoForLoop.vcxproj  2_UserClassIntegrationIntoForLoop.vcxproj.filters
W1/ClassTemplates/3_TypeInferenceInClassTemplates/: 3_TypeInferenceInClassTemplates.cpp  3_TypeInferenceInClassTemplates.vcxproj  3_TypeInferenceInClassTemplates.vcxproj.filters
W1/ClassTemplates/4_ClassTemplatesTypeInference_Part2/: 4_ClassTemplatesTypeInference_Part2.cpp  4_ClassTemplatesTypeInference_Part2.vcxproj  4_ClassTemplatesTypeInference_Part2.vcxproj.filters
W1/ClassTemplates/5_AutomaticTypeInferenceOfTYpeReturnedByFunction/: 5_AutomaticTypeInferenceOfTYpeReturnedByFunction.cpp  5_AutomaticTypeInferenceOfTYpeReturnedByFunction.vcxproj  5_AutomaticTypeInferenceOfTYpeReturnedByFunction.vcxproj.filters
W1/IntroToMacros/1_1_MacrosExample/: 1_1_MacrosExample.cpp  1_1_MacrosExample.vcxproj  1_1_MacrosExample.vcxproj.filters
W1/IntroToMacros/1_IntroToMacros/: 1_IntroToMacros.cpp  1_IntroToMacros.vcxproj  (+1 more)
W2/: CLionTestProject.cpp  CMakeLists.txt
W2/PrinciplesOfCodeOptimization/: 1_2ndRuleOfCodeOptimiation.cpp  2_ImplementingOwnProfiler.cpp  3_ImprovingProfiler.cpp  CMakeLists.txt  profile.h
(+75 files in other folders)
